--- a/OldReports/Report08_07_2021_12_35_37.html
+++ b/OldReports/Report08_07_2021_12_35_37.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-07-08 13:31:04</span>
+					<span class='suite-started-time'>2021-07-08 12:35:37</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 24s+513ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 20s+643ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 24s+513ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 20s+643ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-07-08 13:30:39</span> 
+							<span class='panel-lead suite-started-time'>2021-07-08 12:35:16</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-07-08 13:31:04</span> 
+							<span class='panel-lead suite-ended-time'>2021-07-08 12:35:37</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='cdbe328c-6888-4a6f-a8e6-34ecd41c0c20'>
+										<li class='collection-item test displayed active fail ' extentid='a7ef1e35-d28c-4cf8-91b7-6d7d34e50ec8'>
 											<div class='test-head'>
 												<span class='test-name'>Validating_HomePage </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='test-status label right outline capitalize fail'>fail</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-08 13:30:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-08 13:31:04</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 24s+365ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-08 12:35:16</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-08 12:35:37</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 20s+487ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,98 +264,63 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:30:47</td>
+																	<td class='timestamp'>12:35:24</td>
 																	<td class='step-details'>UserName :testinkbox@gmail.com</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:30:49</td>
+																	<td class='timestamp'>12:35:26</td>
 																	<td class='step-details'>Password :Test@1234</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:30:54</td>
+																	<td class='timestamp'>12:35:30</td>
 																	<td class='step-details'>Clicked on Login button</td>
 																</tr>
 																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
-																	<td class='step-details'>SHOP : is visible on Menubar</td>
+																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+																	<td class='timestamp'>12:35:36</td>
+																	<td class='step-details'>SHOPP : is not visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>TATTOO QUIZ : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>CUSTOM : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>COLLABS : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>TRENDING : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>FREEHAND INK : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>SALE : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:00</td>
+																	<td class='timestamp'>12:35:36</td>
 																	<td class='step-details'>HOW IT WORKS : is visible on Menubar</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:01</td>
+																	<td class='timestamp'>12:35:37</td>
 																	<td class='step-details'>BTS | INKBOX : is visible on Menubar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:01</td>
-																	<td class='step-details'>Student Discount button is visible on Navbar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:01</td>
-																	<td class='step-details'>Help button is visible on Navbar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:01</td>
-																	<td class='step-details'>UserAccount button is visible on Navbar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:04</td>
-																	<td class='step-details'>Your Profile is visible on Manubar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:04</td>
-																	<td class='step-details'>OrderHistory is visible on Manubar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:04</td>
-																	<td class='step-details'>My Rewards is visible on Manubar</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>13:31:04</td>
-																	<td class='step-details'>My Favorites is visible on Manubar</td>
 																</tr>
 														</tbody>
 													</table>
